--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Responsive Web Application that serves as a source of essential information for immigrants"
+      content="Responsive Web Application that serves as a source of essential information for immigrants. Available in English and Ukrainian."
     />
     <link
       rel="apple-touch-icon"
