css clean up and added custom google fonts

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,16 @@
       rel="apple-touch-icon"
       href="%PUBLIC_URL%/android-chrome-192x192.png"
     />
+    <!-- google fonts  -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato&family=Montserrat&family=Noto+Sans+JP&family=Nunito+Sans:opsz@6..12&family=PT+Sans&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- google fonts  -->
+
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
